# astrial

./: AGENTS.md  CMakeLists.txt  LICENSE  README.md
cmake/: UseIoUring.cmake
examples/: 01_basic.cpp  01_connect.cpp  01_list_ports.cpp  02_async_write.cpp  02_reconnect.cpp  CMakeLists.txt
include/: astrial.hpp
include/astrial/: Serial.hpp  SerialBuilder.hpp  Types.hpp  astrial.hpp  detail.hpp  port.hpp
src/: astrail.cpp  astrial.cpp
src/astrial/: Serial.cpp  SerialBuilder.cpp  Types.cpp  detail.cpp  ports.cpp
